# CKT-WAM

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
ckt_wam/: __init__.py
ckt_wam/experiments/libero/: run_libero_ckt_8gpu.sh  run_libero_ckt_eval.py  run_libero_ckt_eval.sh
ckt_wam/losses/: __init__.py  ckt_losses.py
ckt_wam/models/: __init__.py  ckt_adapter_bank.py
ckt_wam/pipeline/: __init__.py  ckt_pipeline.py  ckt_pipeline_middle.py
ckt_wam/scripts/: train_ckt.py
